--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fidoogfidoline",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mettha.github.io/fidoshundebiks/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
